<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".LoginActivity">

    <!-- Logo -->
    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/applogo"
            android:contentDescription="@string/logo_desc" />

    <!-- Email Input -->
    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_background"
            android:padding="10dp" />

    <!-- Password Input -->
    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            android:padding="10dp" />

    <!-- Login Button -->
    <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login_button"
            android:background="@drawable/button_background"
            android:textColor="@color/white" />

    <!-- Sign Up Option -->
    <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textColor="@color/primary" />

    <!-- Recruiter Login Button -->
    <TextView
            android:id="@+id/recruiter_login_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/recruiter_login_button"
            android:textColor="@color/primary" />

    <!-- Google Sign-In Button -->
    <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recruiter_login_page_button"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />
</RelativeLayout>
